--- a/templates/anime_quiz.html
+++ b/templates/anime_quiz.html
@@ -99,24 +99,20 @@ let index = 0;
 let score = 0;
 
 function showQuestion() {
-    updateProgress(); // 👈 ADD THIS
-
     document.getElementById("feedback").innerText = "";
-    document.getElementById("question").innerText =
-        questions[currentQuestion].question;
+    document.getElementById("question").innerText = questions[index].question;
 
     const optionsDiv = document.getElementById("options");
     optionsDiv.innerHTML = "";
 
-    questions[currentQuestion].options.forEach(option => {
-        const button = document.createElement("button");
-        button.innerText = option;
-        button.onclick = () => checkAnswer(option[0]);
-        optionsDiv.appendChild(button);
+    questions[index].options.forEach(opt => {
+        const btn = document.createElement("button");
+        btn.innerText = opt;
+        btn.onclick = () => checkAnswer(opt[0]);
+        optionsDiv.appendChild(btn);
         optionsDiv.appendChild(document.createElement("br"));
     });
 }
-
 
 function checkAnswer(choice) {
     if (choice === questions[index].answer) {
@@ -150,21 +146,9 @@ function showResults() {
     else msg = "😅 Time for an anime marathon!";
 
     document.getElementById("finalMessage").innerText = msg;
-    document.getElementById("progress-bar").style.width = "100%";
 }
 
 showQuestion();
-</script>
-
-<div class="progress-container">
-    <div id="progress-bar"></div>
-</div>
-
-<script>
-    function updateProgress() {
-        const progress = (currentQuestion / questions.length) * 100;
-        document.getElementById("progress-bar").style.width = progress + "%";
-    }
 </script>
 
 </body>
