--- a/templates/anime_quiz.html
+++ b/templates/anime_quiz.html
@@ -92,7 +92,57 @@ const questions = [
         question: "15) Who holds the title of strongest swordsman?",
         options: ["A) Sanji", "B) Zoro", "C) Mihawk", "D) Shanks"],
         answer: "C"
-    }
+    },
+    {
+            question: "16) What village is Naruto from?",
+            options: ["Sand Village", "Mist Village", "Leaf Village", "Cloud Village"],
+            answer: "Leaf Village"
+        },
+        {
+            question: "17) Who is Luffy’s brother?",
+            options: ["Zoro", "Ace", "Sabo", "Both Ace and Sabo"],
+            answer: "Both Ace and Sabo"
+        },
+        {
+            question: "18) What is the name of Tanjiro’s sister?",
+            options: ["Shinobu", "Mitsuri", "Nezuko", "Kanao"],
+            answer: "Nezuko"
+        },
+        {
+            question: "19) In Attack on Titan, what are Titans weak against?",
+            options: ["Fire", "The heart", "The nape of the neck", "Sunlight"],
+            answer: "The nape of the neck"
+        },
+        {
+            question: "20) What power system is used in Naruto?",
+            options: ["Nen", "Chakra", "Cursed Energy", "Ki"],
+            answer: "Chakra"
+        },
+        {
+            question: "21) Who is the captain of the Straw Hat Pirates?",
+            options: ["Zoro", "Sanji", "Luffy", "Nami"],
+            answer: "Luffy"
+        },
+        {
+            question: "22) What anime features the Dragon Balls?",
+            options: ["One Punch Man", "Naruto", "Dragon Ball", "Bleach"],
+            answer: "Dragon Ball"
+        },
+        {
+            question: "23) What quirk does Deku inherit?",
+            options: ["Explosion", "Half-Cold Half-Hot", "One For All", "All For One"],
+            answer: "One For All"
+        },
+        {
+            question: "24) Who is known as the Symbol of Peace?",
+            options: ["Endeavor", "Deku", "All Might", "Hawks"],
+            answer: "All Might"
+        },
+        {
+            question: "25) What anime features cursed fingers?",
+            options: ["Bleach", "Jujutsu Kaisen", "Tokyo Ghoul", "Demon Slayer"],
+            answer: "Jujutsu Kaisen"
+        }
 ];
 
 let index = 0;
