--- a/templates/anime_quiz.html
+++ b/templates/anime_quiz.html
@@ -95,53 +95,53 @@ const questions = [
     },
     {
             question: "16) What village is Naruto from?",
-            options: ["Sand Village", "Mist Village", "Leaf Village", "Cloud Village"],
-            answer: "Leaf Village"
+            options: ["A) Sand Village", "B) Mist Village", "C) Leaf Village", "D) Cloud Village"],
+            answer: "C"
         },
         {
             question: "17) Who is Luffy’s brother?",
-            options: ["Zoro", "Ace", "Sabo", "Both Ace and Sabo"],
-            answer: "Both Ace and Sabo"
+            options: ["A) Zoro", "B) Ace", "C) Sabo", "D) Both Ace and Sabo"],
+            answer: "D"
         },
         {
             question: "18) What is the name of Tanjiro’s sister?",
-            options: ["Shinobu", "Mitsuri", "Nezuko", "Kanao"],
-            answer: "Nezuko"
+            options: ["A) Shinobu", "B) Mitsuri", "C) Nezuko", "D) Kanao"],
+            answer: "C"
         },
         {
             question: "19) In Attack on Titan, what are Titans weak against?",
-            options: ["Fire", "The heart", "The nape of the neck", "Sunlight"],
-            answer: "The nape of the neck"
+            options: ["A) Fire", "B) The Heart", "C) The Nape of the Neck", "D) Sunlight"],
+            answer: "C"
         },
         {
             question: "20) What power system is used in Naruto?",
-            options: ["Nen", "Chakra", "Cursed Energy", "Ki"],
-            answer: "Chakra"
+            options: ["A) Nen", "B) Chakra", "C) Cursed Energy", "D) Ki"],
+            answer: "B"
         },
         {
             question: "21) Who is the captain of the Straw Hat Pirates?",
-            options: ["Zoro", "Sanji", "Luffy", "Nami"],
-            answer: "Luffy"
+            options: ["A)Zoro", "B) Sanji", "C) Luffy", "D) Nami"],
+            answer: "C"
         },
         {
             question: "22) What anime features the Dragon Balls?",
-            options: ["One Punch Man", "Naruto", "Dragon Ball", "Bleach"],
-            answer: "Dragon Ball"
+            options: ["A) One Punch Man", "B) Naruto", "C) Dragon Ball", "D) Bleach"],
+            answer: "C"
         },
         {
             question: "23) What quirk does Deku inherit?",
-            options: ["Explosion", "Half-Cold Half-Hot", "One For All", "All For One"],
-            answer: "One For All"
+            options: ["A) Explosion", "B) Half-Cold Half-Hot", "C) One For All", "D) All For One"],
+            answer: "C"
         },
         {
             question: "24) Who is known as the Symbol of Peace?",
-            options: ["Endeavor", "Deku", "All Might", "Hawks"],
-            answer: "All Might"
+            options: ["A) Endeavor", "C) Deku", "C) All Might", "D) Hawks"],
+            answer: "C"
         },
         {
             question: "25) What anime features cursed fingers?",
-            options: ["Bleach", "Jujutsu Kaisen", "Tokyo Ghoul", "Demon Slayer"],
-            answer: "Jujutsu Kaisen"
+            options: ["A) Bleach", "B) Jujutsu Kaisen", "C) Tokyo Ghoul", "D) Demon Slayer"],
+            answer: "B"
         }
 ];
 
