--- a/templates/anime_quiz.html
+++ b/templates/anime_quiz.html
@@ -7,7 +7,7 @@
 </head>
 <body>
 
-<h1>🎌 Anime Quiz Game 🎌</h1>
+<h1>🎌 Otaku Knowledge Test 🎌</h1>
 <p id="question"></p>
 
 <div id="options"></div>
