--- a/templates/anime_quiz.html
+++ b/templates/anime_quiz.html
@@ -8,13 +8,22 @@
 <body>
 
 <h1>🎌 Otaku Knowledge Test 🎌</h1>
-<p id="question"></p>
+    <div id="start-screen">
+        <p>Test your anime knowledge across multiple series!</p>
+        <button onclick="startQuiz()">▶ Start Quiz</button>
+    </div>
 
-<div id="options"></div>
-<p id="feedback"></p>
+    <div id="quiz-container" style="display:none;">
+        <h3 id="question"></h3>
+        <div id="options"></div>
 
-<h2 id="finalScore"></h2>
-<h3 id="finalMessage"></h3>
+        <p id="feedback"></p>
+
+        <h2 id="finalScore"></h2>
+        <h3 id="finalMessage"></h3>
+
+        <button id="replayBtn" onclick="restartQuiz()">🔁 Play Again</button>
+    </div>
 
 <script>
 const questions = [
@@ -147,6 +156,12 @@ const questions = [
 
 let index = 0;
 let score = 0;
+
+function startQuiz() {
+        document.getElementById("start-screen").style.display = "none";
+        document.getElementById("quiz-container").style.display = "block";
+        showQuestion();
+    }
 
 function showQuestion() {
     document.getElementById("feedback").innerText = "";
